--- a/main.yaml
+++ b/main.yaml
@@ -38,6 +38,15 @@ languages:
       - penguins
       - ubuntu
       
+  - name: bash
+    title: "Bash CLI Cheatsheet"
+    version: "6.14.7"
+    description: "Everyday Linux commands and sysadmin shortcuts."
+    database: "bash/bash.yaml"
+    alias:
+      - sh
+      - shell
+      - bashscript    
     
   - name: kubernetes
     title: "Kubernetes Cheatsheet"
